--- a/src/css/FIFSRegistration.css
+++ b/src/css/FIFSRegistration.css
@@ -26,33 +26,30 @@ button
 
 .FIFSRegistration
 {
-	text-align:      center;
 	display:         flex;
-	flex-direction:  column;
-	height:          100vh;
-	width:           100vw;
-	align-items:     center;
-	justify-content: center;
-}
-.FIFSRegistration form
-{
-	display:         flex;
-	height:          260px;
-	width:           340px;
-	text-align:      center;
 	flex-direction:  column;
 	align-items:     center;
 	justify-content: center;
+	text-align:      center;
+	height:          360px;
+	width:           360px;
 	size:            1.25rem;
 	box-shadow:      0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
 	padding:         10px;
 }
+.FIFSRegistration form
+{
+}
 .FIFSRegistration form .inputgroup
 {
 	display: flex;
-	width:   calc(320px - 1rem);
+	width:   calc(360px - 20px - 1rem);
 	padding: 0 .5rem;
 	margin:  .5rem;
+}
+.FIFSRegistration form .inputgroup *
+{
+	width: 50%;
 }
 .FIFSRegistration form input
 {
