--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 body
 {
-	margin: 0;
+	display:         flex;
+	flex-direction:  column;
+	height:          100vh;
+	width:           100vw;
+	align-items:     center;
+	justify-content: center;
+	margin:          0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
