--- a/src/css/FIFSRegistration.css
+++ b/src/css/FIFSRegistration.css
@@ -24,6 +24,9 @@ button
 	display: none;
 }
 
+/*****************************************************************************
+ *                       FIFSRegistration - Main block                       *
+ *****************************************************************************/
 .FIFSRegistration
 {
 	display:         flex;
@@ -37,23 +40,17 @@ button
 	box-shadow:      0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
 	padding:         10px;
 }
-.FIFSRegistration form
-{
-}
+
+/*****************************************************************************
+ *                          FIFSRegistration - Form                          *
+ *****************************************************************************/
 .FIFSRegistration form .inputgroup
 {
-	display: flex;
-	width:   calc(360px - 20px - 1rem);
-	padding: .3rem 0;
-	margin:  .5rem 0;
-}
-.FIFSRegistration form.valid .inputgroup
-{
+	display:       flex;
+	width:         calc(360px - 20px - 1rem);
+	padding:       .3rem 0;
+	margin:        .5rem 0;
 	border-bottom: 2px solid #00c851;
-}
-.FIFSRegistration form:not(.valid) .inputgroup
-{
-	border-bottom: 2px solid #ff4444;
 }
 .FIFSRegistration form .inputgroup *:not(:only-child)
 {
@@ -62,16 +59,9 @@ button
 .FIFSRegistration form input
 {
 	width:   100%;
+	color:   #00c851;
 	padding: 0;
 	border:  none;
-}
-.FIFSRegistration form.valid input
-{
-	color: #00c851;
-}
-.FIFSRegistration form:not(.valid) input
-{
-	color: #ff4444;
 }
 .FIFSRegistration form label
 {
@@ -83,26 +73,6 @@ button
 {
 	content: '.';
 }
-.FIFSRegistration form button[type=submit]
-{
-	cursor:           pointer;
-	color:            #ffffff;
-	background-color: #212121;
-}
-.FIFSRegistration form:not(.valid) button[type=submit]
-{
-	cursor:           not-allowed;
-	pointer-events:   none;
-	background-color: #545454;
-}
-
-.FIFSRegistration form video
-{
-	width:            320px;
-	height:           240px;
-	background-color: #cccccc;
-}
-
 .FIFSRegistration form button
 {
 	cursor:           pointer;
@@ -113,4 +83,32 @@ button
 {
 	margin: -.4rem;
 	height: 1.4rem;
+}
+
+/*****************************************************************************
+ *                    FIFSRegistration - Form:not(.valid)                    *
+ *****************************************************************************/
+.FIFSRegistration form:not(.valid) input
+{
+	color: #ff4444;
+}
+.FIFSRegistration form:not(.valid) .inputgroup
+{
+	border-bottom: 2px solid #ff4444;
+}
+.FIFSRegistration form:not(.valid) button[type=submit]
+{
+	cursor:           not-allowed;
+	pointer-events:   none;
+	background-color: #545454;
+}
+
+/*****************************************************************************
+ *                     FIFSRegistration - Video preview                      *
+ *****************************************************************************/
+.FIFSRegistration form video
+{
+	width:            320px;
+	height:           240px;
+	background-color: #cccccc;
 }
