--- a/src/css/FIFSRegistration.css
+++ b/src/css/FIFSRegistration.css
@@ -1,14 +1,20 @@
+
+@font-face {
+  font-family: "Proxima-nova";
+  src: url("https://use.typekit.net/nks7irh.css") format("truetype"); }
+
 button
 {
 	display:        inline-block;
-	font-weight:    400;
+	font-weight:    600;
 	text-align:     center;
 	text-transform: uppercase;
 	vertical-align: middle;
 	word-wrap:      break-word;
 	white-space:    normal;
-	border:         0;
-	border-radius:  .125rem;
+	border:         10;
+	border-radius:  .250rem;
+	border-color: #d4dcea;
 	box-shadow:     0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
 	padding:        .5rem 2.5rem;
 	margin:         .5rem;
@@ -23,7 +29,19 @@ button
 {
 	display: none;
 }
-
+h3 {
+		position: relative;
+    top: -30px;
+    font-size: 1em;
+    color: #4F5C73;
+}
+p {
+		font-size: 0.8em;
+    position: relative;
+    font-family: "Proxima-Nova", sans-serif;
+    color: #4F5C73;
+    top: 50px;
+}
 /*****************************************************************************
  *                       FIFSRegistration - Main block                       *
  *****************************************************************************/
@@ -38,12 +56,17 @@ button
 	width:           360px;
 	box-shadow:      0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
 	padding:         10px;
+	background:url("../assets/rlc-logo.svg") 0 0  no-repeat;
+	background-position: -10% 175%;
+	background-size: 60%;
+
+
 }
 .FIFSRegistration,
 .FIFSRegistration form input,
 .FIFSRegistration form label
 {
-	font-family: "Roboto", sans-serif;
+	font-family: "Proxima-Nova", sans-serif;
 	font-size:   1.25rem;
 }
 
@@ -56,7 +79,7 @@ button
 	width:         calc(360px - 20px - 1rem);
 	padding:       .3rem 0;
 	margin:        .5rem 0;
-	border-bottom: 2px solid #00c851;
+	border-bottom: 2px solid #11B15E;
 }
 .FIFSRegistration form .inputgroup *:not(:only-child)
 {
@@ -65,7 +88,7 @@ button
 .FIFSRegistration form input
 {
 	width:   100%;
-	color:   #00c851;
+	color:   #11B15E;
 	padding: 0;
 	border:  none;
 }
@@ -82,8 +105,8 @@ button
 .FIFSRegistration form button
 {
 	cursor:           pointer;
-	color:            #ffffff;
-	background-color: #212121;
+	color:            #5d4b00;
+	background-color: #F9C300;
 }
 .FIFSRegistration form button img
 {
@@ -96,17 +119,17 @@ button
  *****************************************************************************/
 .FIFSRegistration form:not(.valid) input
 {
-	color: #ff4444;
+	color: #EF5353;
 }
 .FIFSRegistration form:not(.valid) .inputgroup
 {
-	border-bottom: 2px solid #ff4444;
+	border-bottom: 2px solid #EF5353;
 }
 .FIFSRegistration form:not(.valid) button[type=submit]
 {
 	cursor:           not-allowed;
 	pointer-events:   none;
-	background-color: #545454;
+	background-color: #fff;
 }
 
 /*****************************************************************************
