--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@ body
 	align-items:     center;
 	justify-content: center;
 	margin:          0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+	font-family: "Proxima-Nova", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
 code
 {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+	font-family: "Proxima-Nova", sans-serif;
 }
