ENS link fix + minor css improvement

--- a/src/css/FIFSRegistration.css
+++ b/src/css/FIFSRegistration.css
@@ -86,7 +86,11 @@ p {
 }
 .FIFSRegistration form .inputgroup *:not(:only-child)
 {
-	width: 50%;
+	width:   50%;
+}
+.FIFSRegistration form input:only-child
+{
+	padding: 0 1rem;
 }
 .FIFSRegistration form input
 {
