--- a/src/css/FIFSRegistration.css
+++ b/src/css/FIFSRegistration.css
@@ -1,7 +1,9 @@
 
-@font-face {
+@font-face
+{
   font-family: "Proxima-nova";
-  src: url("https://use.typekit.net/nks7irh.css") format("truetype"); }
+  src: url("https://use.typekit.net/nks7irh.css") format("truetype");
+}
 
 button
 {
@@ -53,13 +55,10 @@ p {
 	text-align:      center;
 	height:          360px;
 	width:           360px;
-	box-shadow:      0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
 	padding:         10px;
 	background:url("../assets/rlc-logo.svg") 0 0  no-repeat;
 	background-position: -10% 175%;
 	background-size: 60%;
-
-
 }
 .FIFSRegistration,
 .FIFSRegistration form input,
