--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,10 @@
 body
 {
-	display:         flex;
-	flex-direction:  column;
-	height:          100vh;
-	width:           100vw;
-	align-items:     center;
-	justify-content: center;
 	margin:          0;
 	font-family: "Proxima-Nova", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background: #FFFFFF;
 }
 
 code
