--- a/src/css/FIFSRegistration.css
+++ b/src/css/FIFSRegistration.css
@@ -3,7 +3,7 @@
 	font-family: "Proxima-nova";
 	src: url("https://use.typekit.net/nks7irh.css") format("truetype");
 }
-h1, h2, h3, h4, h5, h6
+p, h1, h2, h3, h4, h5, h6
 {
 	color: #4F5C73;
 }
@@ -32,7 +32,6 @@ h3.header
 p
 {
 	font-size: 0.8em;
-	color:     #4F5C73;
 }
 p.footer
 {
@@ -141,13 +140,6 @@ p.footer
 	cursor:           not-allowed;
 	pointer-events:   none;
 	background-color: #fff;
-}
-/*****************************************************************************
- *                    FIFSRegistration - Notifications                  *
- *****************************************************************************/
-.notification{
-	color:#4F5C73;
-
 }
 
 /*****************************************************************************
